--- a/public/index.html
+++ b/public/index.html
@@ -1,7 +1,14 @@
+<!doctype html>
 <html>
-<head>
-</head>
-<body>
-Test
-</body>
+	<head>
+		<meta charset="UTF-8">
+		<title>Socket.io Basic</title>
+	</head>
+	<body>
+		<script src="/js/jquery-2.1.4.min.js"></script>
+		<script src="/js/socket.io-1.3.7.js"></script>
+		<script type="text/javascript">
+			var socket = io();
+		</script>
+	</body>
 </html>
