--- a/public/index.html
+++ b/public/index.html
@@ -30,13 +30,16 @@
     </style>
   </head>
   <body>
+  <script src="/js/socket.io.js"></script>
+    <script src="/js/app.js"></script>
+
     <ul id="messages"></ul>
     <form action="">
       <input id="m" autocomplete="off" /><button>Send</button>
     </form>
-    <script src="/socket.io/socket.io.js"></script>
-	<script>
-	  var socket = io();
-	</script>
+
+	<!-- <script type="text/javascript">
+		var socket = io();
+	</script> -->
   </body>
 </html>
