--- a/public/index.html
+++ b/public/index.html
@@ -1,20 +1,27 @@
-<!-- <!doctype html>
+<!doctype html>
 <html>
 	<head>
 		<meta charset="UTF-8">
 		<title>Socket.io Basic</title>
 	</head>
 	<body>
+		
+	<div class="messages">
+		<!-- messages goes here -->
+	</div>
+
+		<form id="message-form">
+			<input type="text" name="message" />
+			<input type="submit" />
+		</form>
+
 		<script src="/js/jquery-2.1.4.min.js"></script>
 		<script src="/js/socket.io-1.3.7.js"></script>
-		<script type="text/javascript">
-			var socket = io();
-		</script>
-		Test
+		<script src="/js/app.js"></script>
 	</body>
-</html> -->
+</html>
 
-<!doctype html>
+<!-- <!doctype html>
 <html>
   <head>
     <title>Socket.IO chat</title>
@@ -30,16 +37,14 @@
     </style>
   </head>
   <body>
-  <script src="/js/socket.io.js"></script>
+  	<script src="/js/jquery-2.1.4.min.js"></script>
+  	<script src="/js/socket.io.js"></script>
     <script src="/js/app.js"></script>
 
-    <ul id="messages"></ul>
-    <form action="">
-      <input id="m" autocomplete="off" /><button>Send</button>
+    <form id="message-form">
+      <input type="text" name="message" /><input type="submit" />
     </form>
 
-	<!-- <script type="text/javascript">
-		var socket = io();
-	</script> -->
+	
   </body>
-</html>
+</html> -->
