--- a/public/index.html
+++ b/public/index.html
@@ -6,48 +6,13 @@
 	</head>
 	<body>
 		
-	<div class="messages">
-		<!-- messages goes here -->
-	</div>
-
-		<form id="message-form">
-			<input type="text" name="message" />
-			<input type="submit" />
+		<h1>Join Chat</h1>
+		
+		<form action="/chat.html">
+			<label>Display Name</label>
+			<input type="text" name="name"/>
+			<input type="submit" value="Join Chat" />
 		</form>
 
-		<script src="/js/jquery-2.1.4.min.js"></script>
-		<script src="/js/socket.io-1.3.7.js"></script>
-		<script src="/js/moment.js"></script>
-		<script src="/js/QueryParams.js"></script>
-		<script src="/js/app.js"></script>
-		
 	</body>
 </html>
-
-<!-- <!doctype html>
-<html>
-  <head>
-    <title>Socket.IO chat</title>
-    <style>
-      * { margin: 0; padding: 0; box-sizing: border-box; }
-      body { font: 13px Helvetica, Arial; }
-      form { background: #000; padding: 3px; position: fixed; bottom: 0; width: 100%; }
-      form input { border: 0; padding: 10px; width: 90%; margin-right: .5%; }
-      form button { width: 9%; background: rgb(130, 224, 255); border: none; padding: 10px; }
-      #messages { list-style-type: none; margin: 0; padding: 0; }
-      #messages li { padding: 5px 10px; }
-      #messages li:nth-child(odd) { background: #eee; }
-    </style>
-  </head>
-  <body>
-  	<script src="/js/jquery-2.1.4.min.js"></script>
-  	<script src="/js/socket.io.js"></script>
-    <script src="/js/app.js"></script>
-
-    <form id="message-form">
-      <input type="text" name="message" /><input type="submit" />
-    </form>
-
-	
-  </body>
-</html> -->
