--- a/public/chat.html
+++ b/public/chat.html
@@ -6,10 +6,12 @@
 	</head>
 	<body>
 		
+	<a href="/index.html">Change Name</a><br/>
+
 	<div class="messages">
 		<!-- messages goes here -->
 	</div>
-		<a href="/index.html">Change Name</a>
+
 		<form id="message-form">
 			<input type="text" name="message" />
 			<input type="submit" />
