--- a/public/chat.html
+++ b/public/chat.html
@@ -8,6 +8,8 @@
 		
 	<a href="/index.html">Change Name</a><br/>
 
+	<h1 class="room-title"></h1>
+
 	<div class="messages">
 		<!-- messages goes here -->
 	</div>
