--- a/public/chat.html
+++ b/public/chat.html
@@ -3,27 +3,46 @@
 	<head>
 		<meta charset="UTF-8">
 		<title>Socket.io Basic</title>
+		<link rel="stylesheet" href="./css/bootstrap.min.css" />
+		<link rel="stylesheet" href="./css/styles.css" />
 	</head>
 	<body>
-		
-	<a href="/index.html">Change Name</a><br/>
+	<div class="vertical-center">
+		<div class="container ">
+			<div class="row">
+				<div class="col-md-6 col-md-offset-3 well">
+					<a href="/index.html">Change Name</a><br/>
 
-	<h1 class="room-title"></h1>
+					<h1 class="room-title"></h1>
 
-	<div class="messages">
-		<!-- messages goes here -->
+					<ul class="messages list-group" >
+						<!-- messages goes here -->
+					</ul>
+
+					<form id="message-form">
+					<div class="form-group">
+						<div class="input-group">
+							<span class="input-group-addon">
+								<i class="glyphicon glyphicon-comment"></i>
+							</span>
+							<input type="text" name="message" class="form-control" />
+						</div>
+					</div>
+					<div class="input-group">
+						<input type="submit" class="btn btn-default btn-block" />
+					</div>
+						
+					</form>
+				</div>
+			</div>
+		</div>
 	</div>
-
-		<form id="message-form">
-			<input type="text" name="message" />
-			<input type="submit" />
-		</form>
-
-		<script src="/js/jquery-2.1.4.min.js"></script>
-		<script src="/js/socket.io-1.3.7.js"></script>
-		<script src="/js/moment.js"></script>
-		<script src="/js/QueryParams.js"></script>
-		<script src="/js/app.js"></script>
 		
+	<script src="/js/jquery-2.1.4.min.js"></script>
+	<script src="/js/socket.io-1.3.7.js"></script>
+	<script src="/js/moment.js"></script>
+	<script src="/js/QueryParams.js"></script>
+	<script src="/js/app.js"></script>
+
 	</body>
 </html>
