--- a/public/chat.html
+++ b/public/chat.html
@@ -5,35 +5,38 @@
 		<title>Socket.io Basic</title>
 		<link rel="stylesheet" href="./css/bootstrap.min.css" />
 		<link rel="stylesheet" href="./css/styles.css" />
+		<style>
+			.well {
+				margin-top: 35px;
+			}
+		</style>
 	</head>
 	<body>
-	<div class="vertical-center">
-		<div class="container ">
-			<div class="row">
-				<div class="col-md-6 col-md-offset-3 well">
-					<a href="/index.html">Change Name</a><br/>
+	<div class="container ">
+		<div class="row">
+			<div class="col-md-6 col-md-offset-3 well">
+				<a href="/index.html">Change Name</a><br/>
 
-					<h1 class="room-title"></h1>
+				<h1 class="room-title text-center"></h1>
 
-					<ul class="messages list-group" >
-						<!-- messages goes here -->
-					</ul>
+				<ul class="messages list-group" >
+					<!-- messages goes here -->
+				</ul>
 
-					<form id="message-form">
-					<div class="form-group">
-						<div class="input-group">
-							<span class="input-group-addon">
-								<i class="glyphicon glyphicon-comment"></i>
-							</span>
-							<input type="text" name="message" class="form-control" />
-						</div>
-					</div>
+				<form id="message-form">
+				<div class="form-group">
 					<div class="input-group">
-						<input type="submit" class="btn btn-default btn-block" />
+						<span class="input-group-addon">
+							<i class="glyphicon glyphicon-comment"></i>
+						</span>
+						<input type="text" name="message" class="form-control" />
 					</div>
-						
-					</form>
 				</div>
+				<div class="input-group">
+					<input type="submit" class="btn btn-default btn-block" />
+				</div>
+					
+				</form>
 			</div>
 		</div>
 	</div>
